corrigido bug z-index input n funcionava

--- a/main.css
+++ b/main.css
@@ -387,15 +387,15 @@ header{
 }
 
 .container{
-	position: relative;
+	
 	width: 100%;
 	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	padding-top: 20px;
+    /*z-index: -1;*/
     z-index: -1;
-    
 }
 
 .container:after{
@@ -419,16 +419,20 @@ header{
 	text-align: center;
 	background-color: #fff;
 	box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
+   
+   
 }
 
 .left{
 	background: url("img/img-contato2.png") no-repeat center;
 	background-size: cover;
 	height: 100%;
+ 
 }
 
 .right{
 	padding: 25px 40px;
+   
 }
 
 h2{
@@ -488,10 +492,12 @@ textarea{
 
 
 #footer{
+    position: relative;
     background: #5434af;
     color: #eee;
     padding: 30px;
     text-align: center;
+    bottom: 0;
 }
 #footer a{
    list-style: none;
